# CMake-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  Makefile  README.md
cmake/: CompilerSupport.cmake  InstallRules.cmake  Options.cmake  ProjectSettings.cmake  ProjectVariables.cmake  TargetDefaults.cmake  UnitTest.cmake
cmake/toolchains/: linux-aarch64.cmake  linux-x86_64.cmake
docs/: ROADMAP.md
include/defaultproject/: version.hpp
include/defaultproject/app/: application.hpp  exit_code.hpp
include/defaultproject/calculator/: calculator.hpp
include/defaultproject/cli/: options.hpp  parser.hpp  usage.hpp
include/defaultproject/io/: stdout_writer.hpp
include/defaultproject/math/: vector.hpp
include/defaultproject/util/: cast.hpp  cstring.hpp
scripts/: install-cmake.sh
src/: CMakeLists.txt  demo.cpp  main.cpp  main.cpp.example
src/app/: application.cpp
src/calculator/: CMakeLists.txt  calculator.cpp  calculator.hpp  main.cpp
src/cli/: parser.cpp  usage.cpp
src/lib/: CMakeLists.txt
src/lib/io/: stdout_writer.cpp
src/math/: CMakeLists.txt  vector.cpp  vector.hpp
src/math/detail/: length.hpp
src/util/: CMakeLists.txt
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  cstring_test.cpp  parser_test.cpp
